# aidebate-python

./: .env.example  .gitignore  LICENSE  LICENSE-APACHE  README.md  README_CN.md  pyproject.toml  requirements.txt  run.py
aidebate/: __init__.py  __main__.py  app.py  config.py  engine.py  prompts.py  storage.py  tools.py  types.py
static/: index.html
